Added cell that includes more Push-Up form criteria.

--- a/pose1.ipynb
+++ b/pose1.ipynb
@@ -1042,6 +1042,360 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a6769534",
+   "metadata": {},
+   "source": [
+    "# More Push-Up Form Criteria"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "1e4bbaf6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ethankondev/Documents/COSI142/.venv/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Path to model files: /Users/ethankondev/.cache/kagglehub/models/google/movenet/tensorFlow2/singlepose-lightning/4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-03-23 13:48:10.417 Python[32013:5955758] +[IMKClient subclass]: chose IMKClient_Modern\n",
+      "2025-03-23 13:48:10.417 Python[32013:5955758] +[IMKInputSession subclass]: chose IMKInputSession_Modern\n"
+     ]
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "import tensorflow as tf\n",
+    "import numpy as np\n",
+    "import tensorflow_hub as hub\n",
+    "import kagglehub as kh\n",
+    "import math\n",
+    "\n",
+    "# Define joint labels based on MoveNet keypoint indices.\n",
+    "JOINT_LABELS = {\n",
+    "    0: \"Nose\",\n",
+    "    1: \"Left Eye\",\n",
+    "    2: \"Right Eye\",\n",
+    "    3: \"Left Ear\",\n",
+    "    4: \"Right Ear\",\n",
+    "    5: \"Left Shoulder\",\n",
+    "    6: \"Right Shoulder\",\n",
+    "    7: \"Left Elbow\",\n",
+    "    8: \"Right Elbow\",\n",
+    "    9: \"Left Wrist\",\n",
+    "    10: \"Right Wrist\",\n",
+    "    11: \"Left Hip\",\n",
+    "    12: \"Right Hip\",\n",
+    "    13: \"Left Knee\",\n",
+    "    14: \"Right Knee\",\n",
+    "    15: \"Left Ankle\",\n",
+    "    16: \"Right Ankle\"\n",
+    "}\n",
+    "\n",
+    "# Define criteria for various workouts.\n",
+    "CRITERIA = {\n",
+    "    \"Squat\": [\n",
+    "        {\n",
+    "            \"name\": \"knees\",\n",
+    "            \"description\": \"Knees reach 90 degrees\",\n",
+    "            \"long_description\": \"The angle between your hip, knee, and ankle must reach 90 degrees. Your thigh should be parallel to the ground.\",\n",
+    "            \"condition\": lambda angles: angles[\"right_hipright_knee\"] <= 90,\n",
+    "            \"requirement\": \"require\",\n",
+    "            \"feedback_fail\": \"Lower your squat to at least 90 degrees!\",\n",
+    "            \"feedback_pass\": \"Great depth! Keep it up!\",\n",
+    "        },\n",
+    "        {\n",
+    "            \"name\": \"shoulders\",\n",
+    "            \"description\": \"Shoulders remain level\",\n",
+    "            \"long_description\": \"Your shoulders should be at the same height during the squat to avoid tilting.\",\n",
+    "            \"condition\": lambda angles: angles[\"left_shoulderright_shoulder\"] < 10,\n",
+    "            \"requirement\": \"avoid\",\n",
+    "            \"feedback_fail\": \"Keep your shoulders level while squatting!\",\n",
+    "            \"feedback_pass\": \"Nice! Your shoulders stayed balanced!\",\n",
+    "        },\n",
+    "        {\n",
+    "            \"name\": \"torso\",\n",
+    "            \"description\": \"Torso remains upright\",\n",
+    "            \"long_description\": \"Your back should be straight, and eyes forward.\",\n",
+    "            \"condition\": lambda angles: angles[\"right_shoulderright_hip\"] >= 70,\n",
+    "            \"requirement\": \"avoid\",\n",
+    "            \"feedback_fail\": \"Straighten your back and look forward!\",\n",
+    "            \"feedback_pass\": \"Great posture!\",\n",
+    "        },\n",
+    "    ],\n",
+    "    \"Push-Up\": [\n",
+    "        {\n",
+    "            \"name\": \"level-shoulders\",\n",
+    "            \"description\": \"Shoulders stay level\",\n",
+    "            \"long_description\": \"Your shoulders should not tilt past 25 degrees.\",\n",
+    "            \"condition\": lambda angles: angles[\"left_shoulderright_shoulder\"] < 25,\n",
+    "            \"requirement\": \"avoid\",\n",
+    "            \"feedback_fail\": \"Keep your shoulders steady during push-ups!\",\n",
+    "            \"feedback_pass\": \"Good control over your shoulders!\",\n",
+    "        },\n",
+    "        {\n",
+    "            \"name\": \"tricep\",\n",
+    "            \"description\": \"Arms fully extend\",\n",
+    "            \"long_description\": \"At the top position, your triceps should form a 90-degree angle with the ground.\",\n",
+    "            \"condition\": lambda angles: angles[\"right_shoulderright_elbow\"] >= 80,\n",
+    "            \"requirement\": \"require\",\n",
+    "            \"feedback_fail\": \"Extend your arms fully at the top!\",\n",
+    "            \"feedback_pass\": \"Good full extension!\",\n",
+    "        },\n",
+    "        {\n",
+    "            \"name\": \"body-alignment\",\n",
+    "            \"description\": \"Body remains straight\",\n",
+    "            \"long_description\": \"Your body should form a straight line from your shoulder to your hip.\",\n",
+    "            \"condition\": lambda angles: angles[\"body_alignment\"] < 10,\n",
+    "            \"requirement\": \"require\",\n",
+    "            \"feedback_fail\": \"Keep your core engaged and maintain a straight body!\",\n",
+    "            \"feedback_pass\": \"Great body alignment!\",\n",
+    "        },\n",
+    "        {\n",
+    "            \"name\": \"elbow-flare\",\n",
+    "            \"description\": \"Elbows remain tucked\",\n",
+    "            \"long_description\": \"Your elbows should stay close to your midline instead of flaring out.\",\n",
+    "            \"condition\": lambda angles: angles[\"elbow_offset_ratio\"] < 0.3,\n",
+    "            \"requirement\": \"avoid\",\n",
+    "            \"feedback_fail\": \"Tuck your elbows in closer to your body!\",\n",
+    "            \"feedback_pass\": \"Good elbow position!\",\n",
+    "        },\n",
+    "    ],\n",
+    "    \"Sit-Up\": [\n",
+    "        {\n",
+    "            \"name\": \"up-position\",\n",
+    "            \"description\": \"Back gets perpendicular to ground\",\n",
+    "            \"long_description\": \"When you are in the 'up' position, your back should be at least 75 degrees.\",\n",
+    "            \"condition\": lambda angles: angles[\"right_shoulderright_hip\"] >= 75,\n",
+    "            \"requirement\": \"require\",\n",
+    "            \"feedback_fail\": \"Sit up higher to reach the correct position!\",\n",
+    "            \"feedback_pass\": \"Good sit-up position!\",\n",
+    "        },\n",
+    "        {\n",
+    "            \"name\": \"down-position\",\n",
+    "            \"description\": \"Back gets horizontal to ground\",\n",
+    "            \"long_description\": \"When you are in the down position, your back should be flat with the ground, including your neck.\",\n",
+    "            \"condition\": lambda angles: angles[\"left_shoulderleft_hip\"] <= 5,\n",
+    "            \"requirement\": \"require\",\n",
+    "            \"feedback_fail\": \"Lie back fully to complete the rep!\",\n",
+    "            \"feedback_pass\": \"Nice full range of motion!\",\n",
+    "        },\n",
+    "        {\n",
+    "            \"name\": \"bent legs\",\n",
+    "            \"description\": \"Legs stay bent\",\n",
+    "            \"long_description\": \"During a sit-up, your legs should stay bent and not move excessively.\",\n",
+    "            \"condition\": lambda angles: angles[\"right_hipright_knee\"] <= 10,\n",
+    "            \"requirement\": \"avoid\",\n",
+    "            \"feedback_fail\": \"Keep your legs stable and bent throughout the movement!\",\n",
+    "            \"feedback_pass\": \"Great job keeping your legs steady!\",\n",
+    "        },\n",
+    "    ]\n",
+    "}\n",
+    "\n",
+    "# Download and load the MoveNet model.\n",
+    "path = kh.model_download(\"google/movenet/tensorFlow2/singlepose-lightning\")\n",
+    "print(\"Path to model files:\", path)\n",
+    "model = tf.saved_model.load(path)\n",
+    "movenet = model.signatures[\"serving_default\"]\n",
+    "\n",
+    "def process_frame(frame):\n",
+    "    \"\"\"Resizes the frame, runs inference with MoveNet, and returns keypoints.\"\"\"\n",
+    "    input_tensor = tf.image.resize(frame, (192, 192))\n",
+    "    input_tensor = tf.cast(input_tensor, dtype=tf.int32)\n",
+    "    input_tensor = tf.expand_dims(input_tensor, axis=0)\n",
+    "    outputs = movenet(input_tensor)\n",
+    "    keypoints = outputs[\"output_0\"].numpy()  # Shape: (1, 1, 17, 3)\n",
+    "    return keypoints\n",
+    "\n",
+    "def draw_skeleton(frame, keypoints, threshold=0.3):\n",
+    "    \"\"\"\n",
+    "    Draws keypoints and connects them with lines to form a skeleton.\n",
+    "    Labels are added at the midpoint of each connection.\n",
+    "    Assumes keypoints are in normalized coordinates with shape (1, 1, 17, 3).\n",
+    "    \"\"\"\n",
+    "    height, width, _ = frame.shape\n",
+    "    kpts = keypoints[0, 0, :, :]  # Shape: (17, 3)\n",
+    "\n",
+    "    # Define skeleton connections (based on MoveNet keypoint indices).\n",
+    "    skeleton_connections = [\n",
+    "        (0, 1), (0, 2),       # Nose to eyes\n",
+    "        (1, 3), (2, 4),       # Eyes to ears\n",
+    "        (0, 5), (0, 6),       # Nose to shoulders\n",
+    "        (5, 7), (7, 9),       # Left arm (shoulder -> elbow -> wrist)\n",
+    "        (6, 8), (8, 10),      # Right arm (shoulder -> elbow -> wrist)\n",
+    "        (5, 6),               # Shoulders\n",
+    "        (5, 11), (6, 12),     # Shoulders to hips\n",
+    "        (11, 12),             # Hips\n",
+    "        (11, 13), (13, 15),    # Left leg (hip -> knee -> ankle)\n",
+    "        (12, 14), (14, 16)     # Right leg (hip -> knee -> ankle)\n",
+    "    ]\n",
+    "\n",
+    "    abs_kpts = []\n",
+    "    # Compute absolute coordinates and draw keypoint circles.\n",
+    "    for kp in kpts:\n",
+    "        y, x, conf = kp\n",
+    "        abs_coord = (int(x * width), int(y * height), conf)\n",
+    "        abs_kpts.append(abs_coord)\n",
+    "        if conf > threshold:\n",
+    "            cv2.circle(frame, (int(x * width), int(y * height)), 5, (0, 255, 0), -1)\n",
+    "\n",
+    "    # Draw skeleton connections and add labels.\n",
+    "    for connection in skeleton_connections:\n",
+    "        i, j = connection\n",
+    "        x1, y1, conf1 = abs_kpts[i]\n",
+    "        x2, y2, conf2 = abs_kpts[j]\n",
+    "        if conf1 > threshold and conf2 > threshold:\n",
+    "            cv2.line(frame, (x1, y1), (x2, y2), (255, 0, 0), 2)\n",
+    "            # Compute midpoint for label.\n",
+    "            mid_x = int((x1 + x2) / 2)\n",
+    "            mid_y = int((y1 + y2) / 2)\n",
+    "            label = f\"{JOINT_LABELS[i]} - {JOINT_LABELS[j]}\"\n",
+    "            cv2.putText(frame, label, (mid_x, mid_y), cv2.FONT_HERSHEY_SIMPLEX,\n",
+    "                        0.5, (255, 255, 255), 1, cv2.LINE_AA)\n",
+    "    return frame\n",
+    "\n",
+    "def compute_pushup_angles(keypoints, frame_shape):\n",
+    "    \"\"\"\n",
+    "    Compute angles required for analyzing push-up form:\n",
+    "      - The angle between the left and right shoulders.\n",
+    "      - The angle at the right elbow.\n",
+    "      - The body alignment angle (right shoulder to right hip relative to horizontal).\n",
+    "      - The ratio of the right elbow's horizontal offset from the body's midline.\n",
+    "    \"\"\"\n",
+    "    height, width, _ = frame_shape\n",
+    "    kpts = keypoints[0, 0, :, :]  # Shape: (17, 3)\n",
+    "\n",
+    "    def to_abs(kp):\n",
+    "        y, x, conf = kp\n",
+    "        return (int(x * width), int(y * height), conf)\n",
+    "\n",
+    "    # Shoulders for level check.\n",
+    "    left_shoulder = to_abs(kpts[5])\n",
+    "    right_shoulder = to_abs(kpts[6])\n",
+    "    dx_shoulder = right_shoulder[0] - left_shoulder[0]\n",
+    "    dy_shoulder = right_shoulder[1] - left_shoulder[1]\n",
+    "    angle_shoulder = abs(math.degrees(math.atan2(dy_shoulder, dx_shoulder)))\n",
+    "    \n",
+    "    # Compute the right elbow angle.\n",
+    "    def calculate_angle(a, b, c):\n",
+    "        ba = np.array([a[0] - b[0], a[1] - b[1]])\n",
+    "        bc = np.array([c[0] - b[0], c[1] - b[1]])\n",
+    "        cosine_angle = np.dot(ba, bc) / (np.linalg.norm(ba) * np.linalg.norm(bc) + 1e-6)\n",
+    "        cosine_angle = np.clip(cosine_angle, -1.0, 1.0)\n",
+    "        return math.degrees(np.arccos(cosine_angle))\n",
+    "    \n",
+    "    right_elbow = to_abs(kpts[8])\n",
+    "    right_wrist = to_abs(kpts[10])\n",
+    "    right_shoulder_point = (right_shoulder[0], right_shoulder[1])\n",
+    "    right_elbow_point = (right_elbow[0], right_elbow[1])\n",
+    "    right_wrist_point = (right_wrist[0], right_wrist[1])\n",
+    "    angle_elbow = calculate_angle(right_shoulder_point, right_elbow_point, right_wrist_point)\n",
+    "    \n",
+    "    # Compute body alignment: angle between right shoulder and right hip.\n",
+    "    right_hip = to_abs(kpts[12])\n",
+    "    dx_body = right_hip[0] - right_shoulder[0]\n",
+    "    dy_body = right_hip[1] - right_shoulder[1]\n",
+    "    angle_body_alignment = abs(math.degrees(math.atan2(dy_body, dx_body)))\n",
+    "    \n",
+    "    # Compute elbow offset from the body's midline.\n",
+    "    left_hip = to_abs(kpts[11])\n",
+    "    mid_shoulder_x = (left_shoulder[0] + right_shoulder[0]) / 2\n",
+    "    mid_hip_x = (left_hip[0] + right_hip[0]) / 2\n",
+    "    midline_x = (mid_shoulder_x + mid_hip_x) / 2\n",
+    "    elbow_offset = abs(right_elbow[0] - midline_x)\n",
+    "    dist_shoulder_hip = math.sqrt((right_hip[0] - right_shoulder[0])**2 + (right_hip[1] - right_shoulder[1])**2)\n",
+    "    elbow_offset_ratio = elbow_offset / (dist_shoulder_hip + 1e-6)\n",
+    "    \n",
+    "    angles = {\n",
+    "        \"left_shoulderright_shoulder\": angle_shoulder,\n",
+    "        \"right_shoulderright_elbow\": angle_elbow,\n",
+    "        \"body_alignment\": angle_body_alignment,\n",
+    "        \"elbow_offset_ratio\": elbow_offset_ratio\n",
+    "    }\n",
+    "    return angles\n",
+    "\n",
+    "def analyze_pushup_form(angles, criteria):\n",
+    "    \"\"\"\n",
+    "    Given computed angles and the push-up criteria, evaluate the form and return feedback messages.\n",
+    "    \"\"\"\n",
+    "    feedback = []\n",
+    "    for criterion in criteria:\n",
+    "        if criterion[\"condition\"](angles):\n",
+    "            feedback.append(criterion[\"feedback_pass\"])\n",
+    "        else:\n",
+    "            feedback.append(criterion[\"feedback_fail\"])\n",
+    "    return feedback\n",
+    "\n",
+    "# Prompt the user to select the workout type.\n",
+    "workout = input(\"Enter workout type (Push-Up, Squat, Sit-Up): \").strip()\n",
+    "if workout not in CRITERIA:\n",
+    "    print(\"Workout type not recognized. Defaulting to Push-Up.\")\n",
+    "    workout = \"Push-Up\"\n",
+    "\n",
+    "window_name = \"Workout Form Analysis - \" + workout\n",
+    "cap = cv2.VideoCapture(0)\n",
+    "\n",
+    "# Set up video recording using properties from the webcam.\n",
+    "frame_width = int(cap.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
+    "frame_height = int(cap.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
+    "fps = cap.get(cv2.CAP_PROP_FPS)\n",
+    "if fps == 0:\n",
+    "    fps = 30  # Fallback if FPS cannot be detected.\n",
+    "fourcc = cv2.VideoWriter_fourcc(*'XVID')\n",
+    "out = cv2.VideoWriter('output_test.avi', fourcc, fps, (frame_width, frame_height))\n",
+    "\n",
+    "while cap.isOpened():\n",
+    "    ret, frame = cap.read()\n",
+    "    if not ret:\n",
+    "        break\n",
+    "\n",
+    "    # Process frame and extract keypoints.\n",
+    "    keypoints = process_frame(frame)\n",
+    "    # Draw the skeleton (with connection labels).\n",
+    "    frame = draw_skeleton(frame, keypoints)\n",
+    "\n",
+    "    # For push-ups, compute angles and overlay feedback.\n",
+    "    if workout == \"Push-Up\":\n",
+    "        angles = compute_pushup_angles(keypoints, frame.shape)\n",
+    "        feedback_list = analyze_pushup_form(angles, CRITERIA[\"Push-Up\"])\n",
+    "        y0, dy = 30, 30\n",
+    "        for i, feedback in enumerate(feedback_list):\n",
+    "            y = y0 + i * dy\n",
+    "            cv2.putText(frame, feedback, (10, y),\n",
+    "                        cv2.FONT_HERSHEY_SIMPLEX, 0.7, (0, 255, 255), 2)\n",
+    "\n",
+    "    # Write the processed frame to the output video.\n",
+    "    out.write(frame)\n",
+    "    cv2.imshow(window_name, frame)\n",
+    "\n",
+    "    # Exit if 'q' is pressed or if the window is closed.\n",
+    "    if cv2.waitKey(1) & 0xFF == ord(\"q\"):\n",
+    "        break\n",
+    "    if cv2.getWindowProperty(window_name, cv2.WND_PROP_VISIBLE) < 1:\n",
+    "        break\n",
+    "\n",
+    "cap.release()\n",
+    "out.release()\n",
+    "cv2.destroyAllWindows()\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "3b421cd3",
